# termtastic

./: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
.cargo/: config.toml
.github/workflows/: build.yml
src/: log2state.rs  main.rs  types.rs
src/macros/: mod.rs  nameof.rs
src/meshtastic/: connect.rs  meshtastic.rs  mod.rs  radio.rs  radio_service.rs  service.rs  types.rs
src/serde/: formdata_deserialize.rs  formdata_serialize.rs  mod.rs
src/service/: chat.rs  config.rs  connection.rs  mod.rs  nodes.rs  settings.rs  ui.rs
src/state/: action.rs  mod.rs  state.rs  store.rs
src/ui/: helpers.rs  logo.rs  mod.rs  types.rs  ui.rs
src/ui/component/: channels.rs  chat.rs  chat_channels.rs  chat_conversations.rs  chat_input.rs  chat_messages.rs  component.rs  connection.rs  device_list.rs  device_selected.rs  header.rs  hotkeys.rs  layout.rs  logs.rs  messenger.rs  mod.rs  nodes.rs  settings.rs  tabs.rs  terminal_size.rs
src/ui/widget/: emoji_selector.rs  hotkeys.rs  mod.rs  placeholder.rs  popup_confirm.rs  popup_dropdown.rs  popup_dropdown_bitmask.rs  popup_input.rs
