[package]
name = "termtastic"
version = "0.1.0"
edition = "2024"

[dependencies]
ansi-to-tui = { version = "8.0" }
anyhow = { version = "1.0" }
arboard = { version = "3.6" }
bluest = { version = "0.6" }
chrono = { version = "0.4" }
circular-queue = { version = "0.2" }
clap = { version = "4.6", features = ["derive"] }
confy = { version = "2.0", default-features = false, features = ["yaml_conf"] }
crossterm = { version = "0.29", features = ["event-stream"] }
futures = { version = "0.3" }
hostaddr = { version = "0.2", features = ["serde"] }
itertools = { version = "0.14" }
maplit = { version = "1.0" }
#meshtastic = { version = "0.1", features = ["bluetooth-le"] }
meshtastic = { git = "https://github.com/meshtastic/rust", branch = "main", features = [
    "bluetooth-le",
] }
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
regex = { version = "*" }
serde = { version = "1.0" }
strum = { version = "0.28", features = ["derive"] }
thiserror = { version = "2.0" }
tokio = { version = "1.51", features = ["full"] }
tokio-graceful-shutdown = { version = "0.19" }
tracing = { version = "0.1" }
tracing-appender = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-unwrap = { version = "1.0" }
tui-input = { version = "0.15", features = [
    "crossterm",
], default-features = false }
tui-widget-list = { version = "0.15.2" }
