[package]
name = "termtastic"
# unused, app version propagated by git tags
version = "0.1.0"
edition = "2024"
authors = ["acelot <provaleriy@gmail.com>"]
description = "Feature-rich Meshtastic® console client"
license-file = "LICENSE"
repository = "https://github.com/acelot/termtastic"
readme = "README.md"
keywords = ["cli", "tui", "meshtastic"]
build = "build.rs"

[[bin]]
name = "termtastic"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
strip = true

[dependencies]
ansi-to-tui = { version = "8.0.1" }
anyhow = { version = "1.0.102" }
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
bluest = { version = "0.6.9" }
chrono = { version = "0.4.44" }
clap = { version = "4.6.1", features = ["derive"] }
confy = { version = "2.0.0", default-features = false, features = [
    "yaml_conf",
] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
emoji = { version = "0.2.1" }
futures = { version = "0.3.32" }
hostaddr = { version = "0.2.4", features = ["serde"] }
itertools = { version = "0.14.0" }
maplit = { version = "1.0.2" }
#meshtastic = { version = "0.1", features = ["bluetooth-le"] }
meshtastic = { git = "https://github.com/meshtastic/rust", branch = "main", features = [
    "bluetooth-le",
] }
nameof = { version = "1.3.0" }
ordermap = { version = "1.2.0" }
ratatui = { version = "0.30.0", features = ["unstable-rendered-line-info"] }
ratatui-textarea = { version = "0.9.1" }
regex = { version = "*" }
serde = { version = "1.0.228" }
strum = { version = "0.28.0", features = ["derive"] }
thiserror = { version = "2.0.18" }
tokio = { version = "1.52.1", features = ["full"] }
tokio-graceful-shutdown = { version = "0.19.3" }
tracing = { version = "0.1.44" }
tracing-appender = { version = "0.2.5" }
tracing-subscriber = { version = "0.3.23", features = ["fmt", "env-filter"] }
tracing-unwrap = { version = "1.0.1" }
tui-widget-list = { version = "0.15.2" }
